<resources>
    <string name="app_name">天啟書城小說閱讀</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_select_file">導入書本</string>
    <string name="action_search_file">搜索文件</string>
    <string name="action_add_bookmark">添加書籤</string>
    <string name="action_read_book">讀書</string>

    <string name="press_twice_to_exit">連續點擊才能退出</string>
    <string name="root">根目錄</string>
    <string name="add_files">加入書架</string>
    <string name="choose_all">全選</string>
    <string name="delete">取消</string>
    <string name="bookpop_size">字體</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_card">書籤</string>
    <string name="bookpop_send">跳轉</string>

    <string name="read_setting_directory">目錄</string>
    <string name="read_setting_night">夜間</string>
    <string name="read_setting_day">日間</string>
    <string name="read_setting_pagemode">翻頁</string>
    <string name="read_setting_set">設置</string>
    <string name="read_setting_pre">開頭</string>
    <string name="read_setting_next">結尾</string>

    <string name="setting_system">系統</string>
    <string name="setting_dark">暗</string>
    <string name="setting_bright">亮</string>
    <string name="setting_add">A+</string>
    <string name="setting_subtract">A-</string>
    <string name="setting_default">默認</string>

    <string name="font_default">系統默認</string>
    <string name="font_qihei">正黑繁體</string>
    <string name="font_xinshou">新宋體</string>
    <string name="font_wawa">娃娃體</string>
    <string name="font_fzxinghei">行黑</string>
    <string name="font_fzkatong">卡通</string>
    <string name="font_bysong">標楷體</string>

    <string name="page_mode_simulation">仿真</string>
    <string name="page_mode_cover">覆蓋</string>
    <string name="page_mode_slide">滑動</string>
    <string name="page_mode_none">無</string>

    <string name="readseting">設置</string>

    <string name="aboutContent">天啟書城小說閱讀是專註於提供更舒適的閱讀體驗,主打本地閱讀,操作方式簡單易上手,目前支持txt格式。</string>
    <string name="etAccount">帳號</string>
    <string name="etPassword">密碼</string>
    <string name="subbit">登入</string>
    <string name="littleHelper">小幫手</string>
    <string name="msg_NoBookShelfListFound">本使用者目前在天啟書城並沒有可看的小說</string>
    <string name="msg_NoNetwork">目前網路無法連線</string>
    <string name="text_NotGranted">沒有被授予權限</string>
    <string name="action_login_out">登出</string>
    <string name="action_book_update">更新書架</string>
</resources>
