<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_book_update"
        android:title="@string/action_book_update"
        android:orderInCategory="90"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_login_out"
        android:title="@string/action_login_out"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_file"
        android:title="@string/action_select_file"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->
</menu>
