<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".LoginActivity">



    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"

        android:text="天啟仙境"
        android:textAlignment="center"
        android:textSize="50sp"/>

    <RelativeLayout
        android:id="@+id/textLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:visibility="invisible">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <EditText
                android:id="@+id/etAccount"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/etAccount" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/textLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayout1"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:hint="@string/etPassword" />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btLoggin"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLayout2"
            android:layout_centerHorizontal="true"
            android:text="@string/subbit"
            android:textColor="#46A3FF"
            android:onClick="onClick"
            />


        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btLoggin"
            android:layout_below="@id/btLoggin"
            android:layout_marginTop="12dp"
            android:text="註冊會員"
            android:textAlignment="center"
            android:textColor="#000093"
            android:textSize="14sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvFindPassword"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/btLoggin"
            android:layout_below="@id/btLoggin"
            android:layout_marginTop="12dp"
            android:text="忘記密碼"
            android:textAlignment="center"
            android:textColor="#000093"
            android:textSize="14sp"
            android:visibility="gone"/>

    </RelativeLayout>


    <Button
        android:id="@+id/btHelper"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="130dp"
        android:text="@string/littleHelper"
        android:textColor="@color/dark_red"
        android:background="@color/skyblue"
        android:onClick="onClick"
        />

    <!--　　android:layout_marginTop="45dp"-->
</LinearLayout>
